// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkspaceNameLink screenshot when cluster console is NOT available 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="readonly"
    >
      my-project
    </span>
    <div
      data-testid="patternfly-tooltip"
    >
      <span
        data-testid="tooltip-props"
      >
        {"isContentLeftAligned":true,"className":"tooltip"}
      </span>
      <div
        data-testid="tooltip-content"
      >
        Copy to clipboard
      </div>
      <div
        data-testid="tooltip-placed-to"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          name="Copy to Clipboard"
          onClick={[Function]}
          role={null}
          style={
            {
              "paddingLeft": "8px",
            }
          }
          type="button"
        >
          <span
            className="pf-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkspaceNameLink screenshot when cluster console is available 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="readonly"
    >
      <a
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-link pf-m-inline"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={null}
        href="https://console-openshift-console.apps-crc.testing/k8s/ns//workspace.devfile.io~v1alpha2~DevWorkspace/my-project"
        role={null}
        target="_blank"
        type={null}
      >
        my-project
        <span
          className="pf-c-button__icon pf-m-end"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 80v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48zm-88 16H248.029c-21.313 0-32.08 25.861-16.971 40.971l31.984 31.987L67.515 364.485c-4.686 4.686-4.686 12.284 0 16.971l31.029 31.029c4.687 4.686 12.285 4.686 16.971 0l195.526-195.526 31.988 31.991C358.058 263.977 384 253.425 384 231.979V120c0-13.255-10.745-24-24-24z"
            />
          </svg>
        </span>
      </a>
    </span>
    <div
      data-testid="patternfly-tooltip"
    >
      <span
        data-testid="tooltip-props"
      >
        {"isContentLeftAligned":true,"className":"tooltip"}
      </span>
      <div
        data-testid="tooltip-content"
      >
        Copy to clipboard
      </div>
      <div
        data-testid="tooltip-placed-to"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          className="pf-c-button pf-m-link"
          data-ouia-component-id="OUIA-Generated-Button-link-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          name="Copy to Clipboard"
          onClick={[Function]}
          role={null}
          style={
            {
              "paddingLeft": "8px",
            }
          }
          type="button"
        >
          <span
            className="pf-c-button__icon pf-m-start"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
